<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DSS-HRMS</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string-array name="nominee_list">
        <item>Select Relation</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Spouse</item>
        <item>Child</item>
        <item>Others</item>
    </string-array>
    <string name="objective">Objective</string>
    <string name="notifications" tools:ignore="MissingTranslation">Notifications</string>
    <string name="no_notification_found">No notification found</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure">would you like to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="required_field_cannot_be_empty">required field cannot be empty</string>
    <string name="failed">failed</string>
    <string name="wrong_otp">wrong otp</string>
    <string name="password_mismatch">password mismatch</string>
    <string name="back_online">Back Online</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="dss_english">Department Of Social Services</string>
    <string name="dss_bangla">সমাজসেবা অধিদফতর</string>
    <string name="select_option">Select Option</string>
    <string name="select_language">Select Language</string>
    <string name="version">Version</string>
    <string name="login_to_ndss_hrm_system">LOGIN</string>
    <string name="user_id_email_address">User ID / Email</string>
    <string name="user_name">User Name</string>
    <string name="designaiton">পদবি</string>
    <string name="namee">Name</string>
    <string name="password">Password</string>
    <string name="only_address">ঠিকানা</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="hrm">HRM</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profile_home_page">My\n Profile</string>
    <string name="coming">coming...</string>
    <string name="profile">Employee Personal Information</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title">Title</string>
    <string name="no_data_found">No data found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update</string>
    <string name="updated">Your data is pending for approval</string>
    <string name="save">Save</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="present_address">Present Address</string>
    <string name="choose_option_text">Choose Option</string>
    <string name="from_camera_text">From Camera</string>
    <string name="nominee_attachment">Nominee Document</string>
    <string name="from_gallery_text">From Device</string>
    <string name="employee_name">Employee Name</string>
    <string name="name">Name (English)</string>
    <string name="name_of_spouse">Name Of Spouse(English)</string>
    <string name="name_of_spouse_bn">Name Of Spouse(Bangla)</string>
    <string name="workstation">Workstation</string>
    <string name="name_b">Name (Bangla)</string>
    <string name="office">Office</string>
    <string name="district">District</string>
    <string name="type_city_corp_upazila_municipality">Type (City corp/Upazila/Municipality)</string>
    <string name="municipalities">Municipalities</string>
    <string name="municipality">Municipality</string>
    <string name="union">Union</string>
    <string name="citycorporations">CityCorporations</string>
    <string name="citycorporation">City Corporation</string>
    <string name="email">E-mail Address</string>
    <string name="occupation">Occupation</string>
    <string name="mobile">Mobile No.</string>
    <string name="religion">Religion</string>
    <string name="phone">Phone Number</string>
    <string name="sign_out">Sign out</string>
    <string name="photo">Photo</string>
    <string name="personal_information">Basic Information</string>
    <string name="personal_info_for_home">Personal Info</string>
    <string name="training">Training</string>
    <string name="message">Message</string>
    <string name="messaging">Messaging</string>
    <string name="payroll">Payroll</string>
    <string name="personal_information_management">Basic Information Management</string>
    <string name="job_joining_information">Job History</string>
    <string name="quota_information">Quota Information</string>
    <string name="educational_qualification">Educational Qualification</string>
    <string name="spouse">Spouse</string>
    <string name="child_information">Children Information</string>
    <string name="language_information">Language Information</string>
    <string name="local_training">Local Training</string>
    <string name="foreign_training">Foreign Training</string>
    <string name="official_residential_information">Govt. Allocated Residential</string>
    <string name="foreign_travel">Foreign Travel</string>
    <string name="additional_professional_qualification">Additional Professional Qualification</string>
    <string name="publication">Publication</string>
    <string name="honours_and_award">Honours and Award</string>
    <string name="posting_record">Posting Record</string>
    <string name="disciplinary_action">Disciplinary Action</string>
    <string name="leave">Leave</string>
    <string name="job_information">Job Information</string>
    <string name="promotion">Promotion</string>
    <string name="reference">Reference</string>
    <string name="name_child">Name of Children (English)</string>
    <string name="name_child_bn">Name of children (Bangla)</string>
    <string name="child_bd">Date of Birth</string>
    <string name="child_sex">Gender/Sex</string>
    <string name="name_language">Name of Language(English)</string>
    <string name="name_language_bn">Name of Language(Bangla)</string>
    <string name="name_institute">Name of Institute(English)</string>
    <string name="name_institute_bn">Name of Institute(Bangla)</string>
    <string name="exp_level">Experties Level</string>
    <string name="memo_no">Memo no(English)</string>
    <string name="memo_no_bn">Memo no(Bangla)</string>
    <string name="memo_date">Memo Date</string>
    <string name="desi">Designation</string>
    <string name="office_zoon">Office / Zone</string>
    <string name="location">Location(English)</string>
    <string name="location_bn">Location(Bangla)</string>
    <string name="quarter_name">Quarter Name</string>
    <string name="flat_no"><![CDATA[Flat No & Flat Type]]></string>
    <string name="country">Country</string>
    <string name="training_category">Training Category</string>
    <string name="status">Status</string>
    <string name="purpose">Purpose(English)</string>
    <string name="purpose_bangla">Purpose (Bangla)</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="type_of_pub">Type of Publication</string>
    <string name="public_details">Publication Details(English)</string>
    <string name="details_en">Details(English)</string>
    <string name="details_bn">Details(Bangla)</string>
    <string name="public_details_bn">Publication Details(Bangla)</string>
    <string name="pub_name">Publication Name (English)</string>
    <string name="pub_name_bn">Publication Name (Bangla)</string>
    <string name="transfer_type">Transfer Type</string>
    <string name="transfer_from">Transfer From</string>
    <string name="transfer_to">Transfer To</string>
    <string name="eff_date">Effective Date(English)</string>
    <string name="relation_bn">Relation(Bangla)</string>
    <string name="relation">Relation</string>
    <string name="address">address(English)</string>
    <string name="address_bn">address(Bangla)</string>
    <string name="contact">contact no</string>
    <string name="contact_bn">contact no(Bangla)</string>
    <string name="course_title">Course Title(English)</string>
    <string name="course_title_bn">Course Title(Bangla)</string>
    <string name="name_institution">Name of institution</string>
    <string name="certificate">Certificate</string>
    <string name="aware_t">Award Title(English)</string>
    <string name="aware_t_bn">Award Title(Bangla)</string>
    <string name="award_details">Award Details(English)</string>
    <string name="award_details_bn">Award Details(Bangla)</string>
    <string name="award_date">Award Date</string>
    <string name="additional_designation">Additional Designation</string>
    <string name="designation">Designation</string>
    <string name="depertment">Department</string>
    <string name="job_type">Job Type</string>
    <string name="dateof_transfer_in_temporary_revenue">Date of Transfer in Temporary Revenue</string>
    <string name="permanent_confirm_date">Permanent Confirmation Date</string>
    <string name="permanent_document">Permanent Document</string>
    <string name="temporary_revenue_type">Temporary Revenue Type</string>
    <string name="temporary_revenue_transfer_date">Temporary Revenue Transfer Date</string>
    <string name="temporary_revenue_transfer_doc">Temporary Revenue Document</string>
    <string name="regularization_date">Regularization Date</string>
    <string name="regularization_date_doc">Regularization Document</string>
    <string name="help_desk">Help Desk</string>
    <string name="joning_date">Joining Date</string>
    <string name="release_date">Release Date*</string>
    <string name="confirmation_date">Confirmation Date</string>
    <string name="pension">Pension Date</string>
    <string name="_class">Class</string>
    <string name="pay_scale_grade">Pay Scale Grade</string>
    <string name="basic_pay">Basic Pay</string>
    <string name="prl_date">PRL Date</string>
    <string name="pention_date">Pention Date</string>
    <string name="content_management">Content Management</string>
    <string name="category">Category</string>
    <string name="content">Content</string>
    <string name="faq">FAQ</string>
    <string name="training_management">Training Management</string>
    <string name="resource_person">Resource Person</string>
    <string name="budget_and_schedule">Budget And Schedule</string>
    <string name="course_schedule">Course Schedule</string>
    <string name="batch_schedule">Batch Schedule</string>
    <string name="email_text">E-mail</string>
    <string name="search_employee">Search Employee</string>
    <string name="leave_management">Leave Management</string>
    <string name="leave_application">Leave Application</string>
    <string name="leave_summary_dashboard">Leave Dashboard</string>
    <string name="payroll_management">Payroll Management</string>
    <string name="bank_information">Bank Information</string>
    <string name="salary_process">Salary Process</string>
    <string name="working_employee_list">Working Employee List</string>
    <string name="vacant_position_list">Vacant Position List</string>
    <string name="vacant_position_summary">VVacant Position Summary</string>
    <string name="report">Reports</string>
    <string name="download_pdf">Download Pdf</string>
</resources>