<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="example.javatpoint.com.optionmenu.MainActivity">
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_baseline_action_menu"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/menu_home"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_profile"
                android:icon="@drawable/ic_baseline_profile_circle_24"
                android:title="@string/my_profile"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:iconTint="@color/black"
                android:title="@string/action_settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_logout_icon"
                android:iconTint="@color/black"
                android:title="@string/sign_out"
                app:showAsAction="ifRoom" />
        </menu>
    </item>


</menu>