<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/confirmation"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/alertMessageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/are_you_sure"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/noTV"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/yesTV"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>
    </LinearLayout>
</layout>
